[package]
name = "movement_interpolation"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_setters = "0.1.6"
egui = "0.29.1"
egui-winit = "0.29.1"
egui_flex = "0.1.1"
egui_glium = "0.29.0"
glium = "0.36.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
nalgebra = "0.33.0"
winit = "0.30.5"
